2009-04-08  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoffrey "Big Boy" Garen.

        Tests for <rdar://problem/5745677> Possible to stop load during an unload event

        * fast/events/resources/pass.html: Added.
        * fast/events/resources/subframe-stop-load-in-unload-handler-using-document-write.html: Added.
        * fast/events/resources/subframe-stop-load-in-unload-handler-using-window-stop.html: Added.
        * fast/events/stop-load-in-unload-handler-using-document-write-expected.txt: Added.
        * fast/events/stop-load-in-unload-handler-using-document-write.html: Added.
        * fast/events/stop-load-in-unload-handler-using-window-stop-expected.txt: Added.
        * fast/events/stop-load-in-unload-handler-using-window-stop.html: Added.

2009-04-09  Adam Roben  <aroben@apple.com>

        Update results for createDocument-namespace-err.html

        It looks like the test was changed without updating the results before
        it was committed.

        Rubber-stamped by Adele Peterson.

        * fast/dom/DOMImplementation/createDocument-namespace-err-expected.txt:
        Updated.

2009-04-09  Eric Seidel  <eric@webkit.org>

        Reviewed by Oliver Hunt.

        Test cases for document.implementation.createDocument
        https://bugs.webkit.org/show_bug.cgi?id=25096

        We fail some of these tests (as does Mozilla)
        I didn't want to add a behavior change to this crash fix, so I filed
        https://bugs.webkit.org/show_bug.cgi?id=25111 as a follow-up bug.

        * fast/dom/DOMImplementation/createDocument-namespace-err-expected.txt: Added.
        * fast/dom/DOMImplementation/createDocument-namespace-err.html: Added.
        * fast/dom/DOMImplementation/resources/createDocument-namespace-err.js: Copied from fast/dom/Document/resources/createElementNS-namespace-err.js

2009-04-08  Oliver Hunt  <oliver@apple.com>

        Reviewed by Adam Roben.

        Add a test for excess arguments passed to function.apply
