@@ -1,3 +1,13 @@
+2009-04-09  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Simon Fraser.
+
+        Crash when accessing svg.viewport on a detached SVGSVGElement
+        https://bugs.webkit.org/show_bug.cgi?id=25105
+
+        * svg/SVGSVGElement.cpp:
+        (WebCore::SVGSVGElement::isOutermostSVG): return "true" that we are the "outermost" SVG element if we have no parent.  (The spec is unclear as to what behavior we should have in this case, and I doubt anyone cares for now).
+
 2009-04-09  Jian Li  <jianli@chromium.org>
 
         Reviewed by Dimitri Glazkov.
